Add websocket configuration
